--- a/Python/혼공파01~02.md
+++ b/Python/혼공파01~02.md
@@ -22,7 +22,7 @@
 ### 용어
 
 - 파이썬에서는 값을 만들어 내는 간단한 코드를 `표현식`이라고 부른다.
-- `키워드`는 의미가 부여된 특별한 단얼, 사용자가 지정하는 이름에 사용하면 안된다.
+- `키워드`는 의미가 부여된 특별한 단어, 사용자가 지정하는 이름에 사용하면 안된다.
 - `식별자`는 프로그래밍 언어에서 이름을 붙일 때 사용하는 단어이다.
 - `주석`은 프로그램을 설명하는데 사용하며, 프로그램에는 어떠한 영향도 주지 않는다.
 
@@ -55,7 +55,7 @@
 - `{}.format(10)`
   - `{}`의 갯수와 매개변수의 갯수가 같다.
   - 정수, 실수 관련 여러개가 있다. 필요할 때 찾기
-  - `{:g}` -> 의미없는 영어 제거 (`"{:g}".format(52.0)` -> 52)
+  - `{:g}` -> 의미없는 0 제거 (`"{:g}".format(52.0)` -> 52)
 
 
 
